--- a/AspireExtensions/Aspire.Hosting.AWS.LambdaEmulator/Aspire.Hosting.AWS.LambdaEmulator.csproj
+++ b/AspireExtensions/Aspire.Hosting.AWS.LambdaEmulator/Aspire.Hosting.AWS.LambdaEmulator.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+
+	<ItemGroup>
+		<PackageReference Include="Blazored.Modal" Version="3.1.2" />
+	</ItemGroup>
+	
+	<ItemGroup>
+    <EmbeddedResource Include="Resources\**" />
+  </ItemGroup>  	
 </Project>
