--- a/LambdaAspirePOC.AppHost/LambdaAspirePOC.AppHost.csproj
+++ b/LambdaAspirePOC.AppHost/LambdaAspirePOC.AppHost.csproj
@@ -9,9 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.2.0" />
-	<PackageReference Include="Aspire.Hosting.Redis" Version="8.2.0" />  
-    <PackageReference Include="Aspire.Hosting.AWS" Version="8.2.0-preview.1.24428.5" />	  
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="9.0.0" />
+	<PackageReference Include="Aspire.Hosting.Redis" Version="9.0.0" />  
+    <PackageReference Include="Aspire.Hosting.AWS" Version="9.0.0" />	  
   </ItemGroup>
 
   <ItemGroup>
